# catapult

./: .bowerrc  .eslintignore  .eslintrc  .gitignore  .travis.yml  .vpython  .vpython3  .yapfignore  ATOTIC.txt  AUTHORS  BUILD.gn  CONTRIBUTING.md  DIR_METADATA  LICENSE  OWNERS  PRESUBMIT.py  README  README.md  WATCHLISTS  app.yaml  bower.json  codereview.settings  cr-buildbucket.cfg  cr-bulidbucket.cfg  generate_telemetry_build.py  generate_trace_viewer  index.html  index.md  navbar.md  project.cfg  pylintrc  run_dev_server  run_dev_server.py  run_tests  trace2html  trace_viewer.gyp  trace_viewer.gypi  trace_viewer_full.html  update.sh  vulcanize_trace_viewer  (+1 more)
telemetry/: BUILD.gn  DEPS  DIR_METADATA  OWNERS  PRESUBMIT.py  README  README.md  bootstrap_deps  cloud_storage  count  find_dependencies  list_telemetry_unittests  pylintrc  refactor  run_tests  run_web_components_dev_server  telemetry.gyp  telemetry.isolate  validate_binary_dependencies
telemetry/catapult_base/: cloud_storage.py  cloud_storage_unittest.py  support_binaries.py  support_binaries_unittest.py  util.py  util_unittest.py
telemetry/catapult_base/dependency_manager/: __init__.py  archive_info.py  base_config.py  base_config_unittest.py  client_config_unittest.py  cloud_storage_info.py  dependency_info.py  dependency_info_unittest.py  dependency_manager.py  dependency_manager_unittest.py  dependency_manager_util.py  dependency_manager_util_unittest.py
telemetry/catapult_base/refactor_util/: move.py
telemetry/docs/: binary_dependencies.md  run_benchmarks_locally.md  telemetry.core.browser.html  telemetry.core.browser_credentials.html  telemetry.core.browser_finder.html  telemetry.core.browser_options.html  telemetry.core.chrome.adb_commands.html  telemetry.core.chrome.android_browser_backend.html  telemetry.core.chrome.android_browser_finder.html  telemetry.core.chrome.browser_backend.html  telemetry.core.chrome.cros_browser_backend.html  telemetry.core.chrome.cros_browser_finder.html  telemetry.core.chrome.cros_interface.html  telemetry.core.chrome.cros_util.html  telemetry.core.chrome.crx_id.html  telemetry.core.chrome.desktop_browser_backend.html  telemetry.core.chrome.desktop_browser_finder.html  telemetry.core.chrome.extension_dict_backend.html  telemetry.core.chrome.facebook_credentials_backend.html  telemetry.core.chrome.form_based_credentials_backend.html  telemetry.core.chrome.form_based_credentials_backend_unittest_base.html  telemetry.core.chrome.google_credentials_backend.html  telemetry.core.chrome.html  telemetry.core.chrome.inspector_backend.html  telemetry.core.chrome.inspector_console.html  telemetry.core.chrome.inspector_memory.html  telemetry.core.chrome.inspector_page.html  telemetry.core.chrome.inspector_runtime.html  telemetry.core.chrome.inspector_timeline.html  telemetry.core.chrome.misc_web_contents_backend.html  telemetry.core.chrome.png_bitmap.html  telemetry.core.chrome.tab_list_backend.html  telemetry.core.chrome.trace_result.html  telemetry.core.chrome.tracing_backend.html  telemetry.core.chrome.websocket.html  telemetry.core.discover.html  telemetry.core.exceptions.html  telemetry.core.extension_dict.html  telemetry.core.extension_page.html  telemetry.core.extension_to_load.html  (+91 more)
telemetry/docs/pydoc/: telemetry.internal.backends.chrome.crx_id.html
telemetry/examples/: list_available_browsers  measure_trace.py  rendering_microbenchmark_test.py  run_benchmark  telemetry_perf_test.py  unit_tests_test.py
telemetry/examples/benchmarks/: android_go_benchmark.py  simple_story_set.py  tbm_benchmark.py  v8_benchmark.py  v8_metric.py
telemetry/examples/browser_tests/: browser_test.py  example_test_expectations.txt  failed_tests.py  flaky_test.py  generate_tags_test.py  includes_test_expectations_files_test.py  process_tests.py  simple_browser_test.py  simple_numeric_test.py  simple_sharding_test.py  skip_tests_test.py  test_expectations.txt  tests_get_expectations_for_test.py
telemetry/experimental/: measure_trace.py  service_noise_benchmark.py  telemetry_perf_test.py
telemetry/support/html_output/: results-template.html
telemetry/telemetry/: TELEMETRY_DEPS  __init__.py  adb_commands.py  all_page_actions.py  all_page_interactions.py  android_browser_backend.py  android_browser_finder.py  android_browser_finder_unittest.py  android_platform.py  benchmark.py  benchmark_run_unittest.py  benchmark_runner.py  benchmark_runner_unittest.py  benchmark_unittest.py  binary_dependencies.json  block_page_benchmark_results.py  block_page_benchmark_results_unittest.py  browser.py  browser_backend.py  browser_credentials.py  browser_credentials_unittest.py  browser_finder.py  browser_gone_exception.py  browser_options.py  browser_options_unittest.py  browser_unittest.py  click_element_action.py  click_element_action_unittest.py  click_element_interaction.py  click_element_interaction_unittest.py  click_to_navigate_interaction.py  click_to_navigate_interaction_unittest.py  compact_mode_options.py  compound_action.py  compound_action_unittest.py  compound_interaction.py  compound_interaction_unittest.py  cros_browser_backend.py  cros_browser_finder.py  cros_interface.py  (+104 more)
telemetry/telemetry/android/: android_story.py  shared_android_state.py
telemetry/telemetry/command_line/: __init__.py  commands.py  commands_unittest.py  parser.py  parser_unittest.py  utils.py
telemetry/telemetry/core/: _bitmap.py  android_action_runner.py  android_action_runner_unittest.py  android_app.py  android_app_unittest.py  android_platform.py  app.py  (+76 more)
telemetry/tools/: bootstrap_deps  telemetry_bootstrap.py
telemetry/unittest_data/: batterystats_v7.csv  batterystats_v7_no_data.csv  batterystats_v8.csv  batterystats_v8_no_data.csv  inject_script_test.html  interaction_enabled_page.html  js_redirect_to_inject_script_test.html  meta_redirect_to_inject_script_test.html  powermetrics_output.output  sample_perf_report_output.txt  screenshot_sync.html  script_to_inject.js  test.json  test_000.wpr  test_missing_wpr_file.json  test_page_set.py  test_simple_one_page_set.py  test_simple_two_page_set.py  timer_list
(+7725 files in other folders)
