# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("telemetry_test_support") {
  # Generic telemetry deps. For now, just include the whole catapult directory.
  data = [
    "../",
  ]
}

executable("bitmaptools") {
  sources = [
    "telemetry/internal/image_processing/bitmaptools.cc",
  ]

  deps = [
    "//build/config/sanitizers:deps",
  ]
}
